index edit / add twitter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta property="og:image" content="http://kuraruk.com//images/ogp_fb.png" />
     <meta name="keywords" content="kuraruk" />
     <meta name="description" content="KURATA yumi no website." />
+
+    <meta name="twitter:card" content="photo">
+    <meta name="twitter:site" content="@KurAruK">
   </head>
   <body id="top" class="status_h">
     <div class="wrapper clearfix">
